[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/textures/ship.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/star.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/orbitchange-high.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/orbitchange-low.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/explosion.wav" type="AudioStream" id=6]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.52518, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.376471, 0.823529, 1, 1, 0.305882, 1, 0.462745, 1 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.431655, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.991455, 0.453125, 1, 1, 0.376471, 0.376471, 0 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.5317, 10 )

[sub_resource type="Animation" id=4]
resource_name = "escape"
length = 5.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5000 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.12, 0.12 ), Vector2( 0.3, 0.3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Shadow:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4.99 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5000 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:radial_velocity")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.01, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 2.5 ]
}

[sub_resource type="Animation" id=5]
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 150 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.12, 0.12 ), Vector2( 0.1, 0.1 ), Vector2( 0.12, 0.12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Shadow:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 150 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -150 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.12, 0.12 ), Vector2( 0.14, 0.14 ), Vector2( 0.12, 0.12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Shadow:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -150 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
length = 0.7
step = 0.01
tracks/0/type = "method"
tracks/0/path = NodePath("CPUParticles2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 2, 2, 2, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CPUParticles2DExplosion:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 3059.25, 2837.94 )

[node name="Player" type="Area2D"]
script = ExtResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 4.5 )
emitting = false
lifetime = 0.5
explosiveness = 0.9
texture = ExtResource( 3 )
direction = Vector2( -1, 0 )
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 240.0
initial_velocity_random = 0.2
orbit_velocity = 1.0
orbit_velocity_random = 1.0
radial_accel = -800.0
scale_amount = 0.2
scale_amount_random = 0.1
color_ramp = SubResource( 1 )

[node name="CPUParticles2DExplosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
explosiveness = 0.8
texture = ExtResource( 3 )
direction = Vector2( -1, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.2
orbit_velocity_random = 1.0
scale_amount = 0.2
scale_amount_random = 0.1
color_ramp = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="Sprite"]
self_modulate = Color( 0, 0, 0, 0.196078 )
show_behind_parent = true
position = Vector2( -20, 20 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/escape = SubResource( 4 )
anims/orbit_down = SubResource( 5 )
anims/orbit_up = SubResource( 6 )

[node name="AnimationPlayerCollect" type="AnimationPlayer" parent="."]
anims/energy_pellet_collected = SubResource( 7 )

[node name="AnimationPlayerExplode" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 8 )

[node name="TouchControls" type="Node" parent="."]

[node name="TouchArea" type="Area2D" parent="TouchControls"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchControls/TouchArea"]
visible = false
shape = SubResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
